# SonarSimulation

./: .gitpod.yml  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: main.cpp.07E7D621205BEB8E.idx
src/: main.cpp
